Angular Day 8 update

--- a/src/app/events/events-list.component.html
+++ b/src/app/events/events-list.component.html
@@ -3,7 +3,7 @@
     <hr/>
         <div class="row">
             <div *ngFor="let event of events" class="col-md-5">
-                <event-thumbnail  [childEvent]="event" ></event-thumbnail>
+                <event-thumbnail  [childEvent]="event" (click)="handleClickEvent(event.name)"></event-thumbnail>
             </div>
         </div>
 </div>
